feat: todo and done added, and remove section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 									type="radio"
 									id="checkbox1"
 									name="radios"
-									required
 									value="Longue"
+									required
 								/>
 								<label for="checkbox1">Longue</label>
 							</div>
@@ -51,7 +51,7 @@
 									type="radio"
 									id="checkbox2"
 									name="radios"
-									value="Court"
+									value="Courte"
 									required
 								/>
 								<label for="checkbox2">Courte</label>
@@ -73,6 +73,7 @@
 				<button class="darkgreen">Supprimer</button>
 			</section>
 		</main>
-		<script src="app.js"></script>
+		<script src="app.js">
+		</script>
 	</body>
 </html>
